# bachelor-thesis-implementation

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
UCSB/: .gitignore  CMakeLists.txt  build_release.sh  conanfile.py  install.txt  run.py
UCSB/bench/workloads/: 64GB_100B.json  CUSTOM.json
UCSB/cmake/: FindCrc32c.cmake  FindSnappy.cmake  Findbenchmark.cmake  Findfmt.cmake  Findleveldb.cmake  Findlmdb.cmake  Findnlohmann_json.cmake  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
UCSB/src/: bench.cxx
UCSB/src/betree/: betree.hpp
UCSB/src/btree/: btree.hpp
UCSB/src/core/: db.hpp  db_brand.hpp
cmake/: Bundled.cmake  FindClangTidy.cmake  Infrastructure.cmake  README.txt  clang-tidy.cmake
src/: CMakeLists.txt  main.cpp
src/betree/: BeNode.cpp  BeNode.h  BeTree.cpp  BeTree.h
src/btree/: BNode.cpp  BNode.h  BTree.cpp  BTree.h
src/buffer/: OptimalPageBuffer.h  PageBuffer.cpp  PageBuffer.h
src/buffer/lock/: LockSet.cpp  LockSet.h
src/buffer/queue/: FIFOQueue.cpp  FIFOQueue.h  LRUQueue.cpp  LRUQueue.h  Queue.h
src/file/: FileManager.h  Segment.cpp  Segment.h  SegmentManager.cpp  SegmentManager.h
src/tree/: BeNode.cpp  BeNode.h  BeTree.cpp  BeTree.h
src/util/: ErrorHandler.cpp  ErrorHandler.h
test/: CMakeLists.txt  TestBTree.cpp  TestBeTree.cpp  TestBeTreeMethods.cpp  TestFileManager.cpp  TestPageBuffer.cpp  TestQueue.cpp  TestSegmentManager.cpp  Tester.cpp  TesterUtils.cpp  TesterUtils.h
test/utils/: SimpleBinaryTree.cpp  SimpleBinaryTree.h
